examples/lz-v2-examples/multi-org/prod/landing-zone/gatekeeper-policies/guardrails/12-cloud-market-place/tests/iam_partial_policy.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#########
apiVersion: iam.cnrm.cloud.google.com/v1beta1
kind: IAMPartialPolicy
metadata: # kpt-merge: /iampartialpolicy-sample-pubsubadmin
  name: iampartialpolicy-sample-pubsubadmin
  annotations:
    config.kubernetes.io/local-config: 'true'
    internal.kpt.dev/upstream-identifier: 'iam.cnrm.cloud.google.com|IAMPartialPolicy|default|iampartialpolicy-sample-pubsubadmin'
    cnrm.cloud.google.com/blueprint: 'kpt-pkg'
spec:
  resourceRef:
    apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
    kind: PubSubTopic
    name: iampartialpolicy-dep-pubsubadmin
  bindings:
    - role: roles/cloudprivatecatalogproducer.admin
      members:
        - member: serviceAccount:partialpolicy-dep-pubsubadmin@${PROJECT_ID?}.iam.gserviceaccount.com
